--- a/unified_biquaternion_theory_2.0/appendix_G_dark_matter_padic.tex
+++ b/unified_biquaternion_theory_2.0/appendix_G_dark_matter_padic.tex
@@ -1,7 +1,75 @@
-================================================================================\appendix{G}{Dark Matter as Topological Excitations in $\Theta(q,\tau)$ Field}
+\documentclass[12pt,a4paper]{article}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage{lmodern}
+\usepackage{microtype}
+\usepackage{geometry}
+\geometry{margin=1in}
+\usepackage{amsmath,amssymb,amsthm,mathtools}
+\usepackage{bm}
+\usepackage{physics}
+\usepackage{graphicx}
+\usepackage{xcolor}
+\usepackage{hyperref}
+\hypersetup{colorlinks=true, linkcolor=blue, citecolor=blue, urlcolor=blue}
+\usepackage{enumitem}
+\numberwithin{equation}{section}
+
+% Common theorem-like environments (in case the text uses them)
+\newtheorem{theorem}{Theorem}[section]
+\newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{proposition}[theorem]{Proposition}
+\newtheorem{corollary}[theorem]{Corollary}
+\theoremstyle{definition}
+\newtheorem{definition}[theorem]{Definition}
+\newtheorem{assumption}[theorem]{Assumption}
+\theoremstyle{remark}
+\newtheorem{remark}[theorem]{Remark}
+
+\title{Unified Biquaternion Theory (UBT): Appendix H --- Dark Matter with $p$-adic Extension}
+\author{}
+\date{\today}
+
+\begin{document}
+\maketitle
+
+\section{Abstract}
+\section*{Abstract}
+We present a theoretical framework within the Unified Biquaternion Theory (UBT) in which dark matter arises naturally from topologically stable, electromagnetically neutral configurations of the fundamental field \( \Theta(q, \tau) \) in complexified spacetime \( \mathbb{C}^4 \). These configurations, termed "dark modes," carry gravitational mass-energy without electromagnetic interactions and are protected by the topological properties of the field.
+
+\section*{Abstract}
+This document presents the analytical ansatz and geometric characteristics of a topologically nontrivial Hopfion solution \(\Theta_D\) within the Unified Biquaternion Theory (UBT), proposed as a candidate configuration for dark matter.
+
+\begin{abstract}
+This paper presents a dual-mechanism model for the origin of lepton masses within the Unified Biquaternion Theory (UBT). We demonstrate that the masses of higher-generation leptons (muon, tau) are primarily determined by the topological energy of their corresponding Hopfion states (\(n=2, 3\)). In contrast, the mass of the electron (\(n=1\)) is shown to be a composite of a minimal topological contribution and a dominant, negative electromagnetic self-energy correction. The model successfully explains the observed mass hierarchy and makes a quantitative prediction for the electron's self-energy.
+\end{abstract}
+
+\begin{abstract}
+We propose a novel explanation for the mass hierarchy of elementary particles based on the topological modes of the unified biquaternionic field $\Theta(q, \tau)$. This framework generalizes the concept of Hopfions to higher winding numbers, offering a natural mechanism for the existence of three generations of leptons and their sharply differing rest masses. Each particle generation corresponds to a stable topological mode indexed by its Hopf charge $n$, and its mass is derived from a universal topological energy function $S(n)$.
+\end{abstract}
+
+\begin{abstract}
+We present a unified derivation of the electron's self-energy in the framework of the Unified Biquaternion Theory (UBT). This combines analytic and topological insights to explain why the UBT correction to the standard QED self-energy yields the correct experimental value for the electron mass. The key lies in an additional complex phase factor arising from integration over the imaginary time axis and the topological nature of fermionic loops.
+\end{abstract}
 
 \section{Introduction}
+\section{Introduction}
 In the Unified Biquaternion Theory (UBT), dark matter (DM) emerges naturally as a set of topologically protected excitations in the fundamental $\Theta(q,\tau)$ field, where $q$ are the biquaternionic coordinates and $\tau = t + i\psi$ is the complex time. The theory identifies these excitations with \emph{hopfions}, knotted field configurations classified by the Hopf index $Q_H \in \mathbb{Z}$, which are stable due to topological constraints.
+
+\section*{Introduction}
+In the Unified Biquaternion Theory (UBT), dark matter is modeled as topologically stable field configurations – \emph{hopfions} – arising as non-trivial mappings between compactified spatial slices \(S^3\) and internal field space \(S^2\). These configurations are solutions to the UBT field equations for the tensor–spinor field \(\Theta(q,\tau)\) with non-zero Hopf invariant \(Q_H \in \mathbb{Z}\).
+
+\section*{Introduction}
+
+\section{Introduction}
+
+\section{Introduction}
+In this appendix, we explore the possibility that the fine-structure constant $\alpha$ and related physical constants might depend on a prime number parameter $p$, within a $p$-adic extension of the Unified Biquaternion Theory (UBT).
+The motivation stems from the observation that the Jacobi theta functions, central to UBT's toroidal representation, can be generalized to $p$-adic domains.
+Different prime moduli $p$ define independent $\theta_p$-modes on the torus, potentially corresponding to physically distinct realities with slightly different fundamental constants.
+
+\section{Theoretical Framework}
+================================================================================\appendix{G}{Dark Matter as Topological Excitations in $\Theta(q,\tau)$ Field}
 
 \section{Relation to Baryonic Matter and Pseudospin States}
 While baryonic matter corresponds to localized, symmetry-broken excitations with strong coupling to the $SU(3) \times SU(2) \times U(1)$ gauge fields, dark matter modes occupy orthogonal pseudospin sectors of $\Theta(q,\tau)$.
@@ -37,9 +105,6 @@ For a continuous approximation and $T_{\mathrm{DM}} \ll \hbar\omega_0$, the inte
 \end{equation}
 Matching to Planck satellite cosmological measurements $\rho_{\mathrm{DM}}/\rho_{\mathrm{crit}} \approx 0.265$ allows extraction of $\omega_0$ or $g_{\mathrm{eff}}$ in terms of fundamental UBT parameters.
 
-\section{Experimental Detection in UBT Framework}
-A possible detection method involves modulating the phase $\psi$ in a toroidal $\Theta$-resonator, tuned to frequencies corresponding to $\omega_0$ of the DM spectrum. The coupling is expected to produce minute phase shifts or sideband structures in the resonator's electromagnetic response.
-
 \subsection{Dark Photons and $p$-adic Extension}
 In the $p$-adic extension of UBT, each prime $p$ defines an independent $\Theta_p(q,\tau)$ sector. In some universes, the dominant DM component may correspond to $p$-adic photons (``dark photons''), which are massless gauge bosons in the $\Theta_p$ sector, invisible to our $p= \infty$ (real-number) sector except via gravity or suppressed topological mixing.
 
@@ -52,7 +117,7 @@ where $\epsilon_{p} \ll 1$ is the $p$-dependent kinetic mixing parameter.
 \section{Conclusion}
 The UBT description of dark matter as hopfions and other topological modes in $\Theta(q,\tau)$ provides a unified explanation for its stability, weak interactions, and observed abundance. The inclusion of $p$-adic sectors opens a pathway for describing alternate-reality DM components such as dark photons, potentially accessible through precision topological resonance experiments.
 
-\section{Appendix G: Dark Matter in UBT --- Topological Solitons, Quantum Corrections, and Prime/$p$-Adic Sectors}
+\section{Appendix H: Dark Matter in UBT --- Topological Solitons, Quantum Corrections, and Prime/$p$-Adic Sectors}
 \label{app:dm-consolidated}
 
 \subsection{Scope and Motivation}
@@ -148,28 +213,11 @@ with $\mathcal{P}^\star$ a finite set in the truncated adele. As branches couple
 \textbf{Indirect detection.} Radiative decays are topologically forbidden; unlinking annihilations are exponentially suppressed $\sim e^{-R_H\,\Delta}$.
 \textbf{Direct detection.} Nuclear scattering via higher-derivative portals is naturally below current bounds for $R_H\!\gtrsim\!{\rm fm}$ and small mixing.
 
-\subsection{Consistency with the Electromagnetic Sector}
-The same UBT normalization that fixes the $U(1)$ sector and the fine-structure constant (Appendix~\ref{app:alpha-consolidated}) also sets $\kappa_{2,4}$ and the fluctuation gap in \eqref{eq:ubt-hopf-energy}.
-Hence $M_H$ and the derived $\rho_{\rm DM}$ co-vary with the internal-mode scale, tying DM and EM predictions to a common geometric origin.
-
-\subsection{Minimal Parameter Inference (Practical Template)}
-Given an observational target $(\rho_{\rm DM}, \sigma/m)$ and a chosen prime set $\mathcal{P}^\star$, the following steps infer UBT parameters:
-\begin{enumerate}
-\item Fix the internal-mode scale from the $\alpha$ analysis (Appendix~\ref{app:alpha-consolidated}).
-\item Choose $Q_H$ and solve the classical soliton for $(\kappa_2,\kappa_4)$ with $R_H\!\sim\!(\kappa_4/\kappa_2)^{1/2}$.
-\item Compute $\hat{\mathcal{O}}$ on $S^3$ and evaluate $\Delta M_H^{\rm 1\text{-}loop}$ (heat-kernel or phase-shift methods).
-\item Evolve $n_H$ with a nonthermal source $\mathcal{S}_{\rm topo}(T)$; check CMB/BBN and structure-formation constraints.
-\item If including prime sectors, repeat for each $p\in\mathcal{P}^\star$ and sum $\rho_{\rm DM}^{(p)}$.
-\end{enumerate}
-
 \subsection{Summary}
 UBT provides two robust DM mechanisms grounded in its geometry: (i) topologically protected Hopfions of the $\Theta$ field, dressed by controlled quantum corrections, and (ii) orthogonal prime/$p$-adic sectors with their own cold components.
 Both are gravitationally coupled and naturally compatible with cosmological bounds. Their mass and interaction scales are linked to the same internal-mode physics that fixes $\alpha$, yielding correlated predictions across sectors.
 
 \appendix{G: Dark Matter as Topological Hopfions in Unified Biquaternion Theory}
-
-\section*{Introduction}
-In the Unified Biquaternion Theory (UBT), dark matter is modeled as topologically stable field configurations – \emph{hopfions} – arising as non-trivial mappings between compactified spatial slices \(S^3\) and internal field space \(S^2\). These configurations are solutions to the UBT field equations for the tensor–spinor field \(\Theta(q,\tau)\) with non-zero Hopf invariant \(Q_H \in \mathbb{Z}\).
 
 Unlike conventional particle dark matter candidates (e.g., WIMPs, axions), hopfions do not require direct coupling to the Standard Model fields; their stability is protected by topological conservation laws.
 
@@ -211,8 +259,8 @@ Possible observational consequences include:
 \section*{Conclusion}
 The UBT hopfion model provides a purely topological candidate for dark matter, naturally arising from the field \(\Theta(q,\tau)\) without introducing ad hoc particles. This aligns with the theory’s aim to unify physical phenomena through a single geometric–algebraic framework.
 
-\section*{Appendix G: Dark Matter, Hopfions, and Topological Excitations in the $\Theta$-Field}
-\addcontentsline{toc}{section}{Appendix G: Dark Matter, Hopfions, and Topological Excitations in the $\Theta$-Field}
+\section*{Appendix H: Dark Matter, Hopfions, and Topological Excitations in the $\Theta$-Field}
+\addcontentsline{toc}{section}{Appendix H: Dark Matter, Hopfions, and Topological Excitations in the $\Theta$-Field}
 \subsection*{G.1 Motivation}
 Within the Unified Biquaternion Theory (UBT), the master field $\Theta(q,\tau)$ allows for nontrivial topological configurations. 
 A particularly relevant class are \emph{Hopfions}---localized, finite-energy field configurations characterized by a nonzero Hopf invariant. 
@@ -237,7 +285,7 @@ A standard energy functional supporting stable Hopfions is the Faddeev--Skyrme m
 E[n] \;=\; \int\! \mathrm{d}^3x \;\Big\{ \alpha\, (\partial_i n)^2 \;+\; \beta\, (F_{ij})^2 \Big\},\qquad n\cdot n=1.
 In our setting, $\alpha,\beta$ can acquire a weak $\psi$-dependence from the complex-time sector,
 \alpha \to \alpha(\psi),\qquad \beta \to \beta(\psi),
-and additional small corrections may arise from couplings to electromagnetic and matter fields (Appendix D, F). 
+and additional small corrections may arise from couplings to electromagnetic and matter fields (Appendix H, F). 
 The topological lower bound scales as $E \gtrsim c\, |Q_H|^{3/4}$ for some constant $c>0$, consistent with known Hopfion energy--charge relations.
 \subsection*{G.5 Dynamics in Complex Time}
 Allowing slow $\psi$-evolution, the effective Lagrangian density reads
@@ -256,8 +304,8 @@ Since Hopfions are neutral in the $U(1)$ electromagnetic sector (projection to $
 \subsection*{G.7 Couplings to Electromagnetism and Matter}
 At low energies, allowed gauge-invariant couplings are suppressed by small parameters:
 \mathcal{L}_{\mathrm{int}} \;=\; - g_{nA}\, ( \partial_i n \cdot \partial_j n )\, F^{ij} \;-\; g_{nF}\, (F_{ij})^2\, ( \partial_k n )^2 \;-\; g_{n\psi}\, (\partial_\psi n)^2\, \bar{\Psi}\Psi \;+\; \cdots,
-leading to minute birefringence-like effects or dispersion shifts (Appendix D) only in extreme conditions. 
-Psychon-induced $\psi$-fluctuations (Appendix F) may modulate Hopfion stability via $\kappa_\psi$ and $\beta(\psi)$, offering a route to small, structured signatures without spoiling standard-model tests.
+leading to minute birefringence-like effects or dispersion shifts (Appendix H) only in extreme conditions. 
+Psychon-induced $\psi$-fluctuations (Appendix H) may modulate Hopfion stability via $\kappa_\psi$ and $\beta(\psi)$, offering a route to small, structured signatures without spoiling standard-model tests.
 \subsection*{G.8 3D Schematic: Linked Flux Surfaces (Hopf Link)}
 \begin{figure}[h!]
 \centering
@@ -332,8 +380,8 @@ For a sparse ensemble in a fiducial volume $V_{\rm halo}$ with number $N_H$,
 These values serve only as a \emph{scaling} guide; in physical units, $\alpha,\beta$ inherit dimensions from the microscopic UBT action and may acquire weak $\psi$-dependence, $\alpha(\psi),\beta(\psi)$, which shifts $R_H$ and $E$.
 
 \appendix
-\section*{Appendix G: Dark Matter, Hopfions, and Topological Excitations in the $\Theta$-Field}
-\addcontentsline{toc}{section}{Appendix G: Dark Matter, Hopfions, and Topological Excitations in the $\Theta$-Field}
+\section*{Appendix H: Dark Matter, Hopfions, and Topological Excitations in the $\Theta$-Field}
+\addcontentsline{toc}{section}{Appendix H: Dark Matter, Hopfions, and Topological Excitations in the $\Theta$-Field}
 
 \subsection*{G.1 Motivation}
 Within the Unified Biquaternion Theory (UBT), the master field $\Theta(q,\tau)$ allows for nontrivial topological configurations. 
@@ -374,7 +422,7 @@ In our setting, $\alpha,\beta$ can acquire a weak $\psi$-dependence from the com
 \begin{equation}
 \alpha \to \alpha(\psi),\qquad \beta \to \beta(\psi),
 \end{equation}
-and additional small corrections may arise from couplings to electromagnetic and matter fields (Appendix D, F). 
+and additional small corrections may arise from couplings to electromagnetic and matter fields (Appendix H, F). 
 The topological lower bound scales as $E \gtrsim c\, |Q_H|^{3/4}$ for some constant $c>0$, consistent with known Hopfion energy--charge relations.
 
 \subsection*{G.5 Dynamics in Complex Time}
@@ -406,8 +454,8 @@ At low energies, allowed gauge-invariant couplings are suppressed by small param
 \begin{equation}
 \mathcal{L}_{\mathrm{int}} \;=\; - g_{nA}\, ( \partial_i n \cdot \partial_j n )\, F^{ij} \;-\; g_{nF}\, (F_{ij})^2\, ( \partial_k n )^2 \;-\; g_{n\psi}\, (\partial_\psi n)^2\, \bar{\Psi}\Psi \;+\; \cdots,
 \end{equation}
-leading to minute birefringence-like effects or dispersion shifts (Appendix D) only in extreme conditions. 
-Psychon-induced $\psi$-fluctuations (Appendix F) may modulate Hopfion stability via $\kappa_\psi$ and $\beta(\psi)$, offering a route to small, structured signatures without spoiling standard-model tests.
+leading to minute birefringence-like effects or dispersion shifts (Appendix H) only in extreme conditions. 
+Psychon-induced $\psi$-fluctuations (Appendix H) may modulate Hopfion stability via $\kappa_\psi$ and $\beta(\psi)$, offering a route to small, structured signatures without spoiling standard-model tests.
 
 \subsection*{G.8 3D Schematic: Linked Flux Surfaces (Hopf Link)}
 \begin{figure}[h!]
@@ -519,19 +567,9 @@ For a sparse ensemble in a fiducial volume $V_{\rm halo}$ with number $N_H$,
 These values serve only as a \emph{scaling} guide; in physical units, $\alpha,\beta$ inherit dimensions from the microscopic UBT action and may acquire weak $\psi$-dependence, $\alpha(\psi),\beta(\psi)$, which shifts $R_H$ and $E$.
 
 % Appendix 11: Topological Modes and the Geometric Origin of Dark Matter
-\documentclass[12pt]{article}
-\usepackage{amsmath,amssymb,graphicx,geometry}
-\geometry{margin=1in}
-\title{Appendix 11: Topological Modes and the Geometric Origin of Dark Matter}
-\author{Unified Biquaternion Theory Project}
-\date{\today}
 
-\begin{document}
 
 \maketitle
-
-\section*{Abstract}
-We present a theoretical framework within the Unified Biquaternion Theory (UBT) in which dark matter arises naturally from topologically stable, electromagnetically neutral configurations of the fundamental field \( \Theta(q, \tau) \) in complexified spacetime \( \mathbb{C}^4 \). These configurations, termed "dark modes," carry gravitational mass-energy without electromagnetic interactions and are protected by the topological properties of the field.
 
 \section{Topological Dark Modes}
 Let the unified field \( \Theta(q, \tau) \) be defined over a complexified 4-manifold \( \mathbb{C}^4 \), where \( q \in \mathbb{C}^4 \) and \( \tau = t + i\psi \) is complex time. We define a dark mode \( \Theta_D \) as a solution with:
@@ -569,18 +607,6 @@ The dark mode hypothesis aligns with multiple observational phenomena:
   \item \textbf{Large Scale Structure:} The fractal/toroidal aggregation of \( \Theta_D \) modes matches the filamentary cosmic web observed by SDSS and Planck.
   \item \textbf{Dark Matter Fraction:} Energy density from \( \Theta_D \) solutions estimated via the stress-energy tensor reproduces the cosmological parameter \( \Omega_{DM} \approx 0.26 \).
 \end{itemize}
-
-These results suggest that dark matter may not require new particles but arises from the rich geometry and topology of the unified field \( \Theta(q, \tau) \).
-
-\section{Conclusion and Future Work}
-We conclude that topologically neutral solutions in UBT provide a compelling, geometrically grounded candidate for dark matter. Future work will:
-\begin{itemize}
-  \item Simulate \( \Theta_D \) structures using lattice field methods,
-  \item Derive analytic profiles for their gravitational potential,
-  \item Investigate interaction with visible matter and galaxy formation,
-  \item Extend to early-universe cosmology and dark matter genesis.
-\end{itemize}
-
 
 \subsection{P-adická extenze temné hmoty (rigorózní verze)}
 V rámci adelického rozšíření UBT (viz Appendix~\ref{app:padic-rigorous}) každé prvočíslo $p$ definuje lokální $p$-adický sektor
@@ -628,11 +654,6 @@ Selektivní odezva by byla signaturou více-sektorové DM.
 Pro numeriku doporučujeme konečné aproximace $\mathbb{Z}/p^k\mathbb{Z}$ a charakter $\chi_{p^k}(x)=\exp(2\pi i x/p^k)$; příklad kódu viz doprovodný skript
 \texttt{padic\_theta\_demo.py}. Pro vyšší přesnost je vhodné Sage/Pari prostředí.
 
-
-\end{document}
-
-
-
 V rámci rozšíření UBT teorie je přirozené uvažovat \emph{p-adickou extenzi} topologických módů
 temné hmoty, které jsou popsány polem $\Theta(q,\tau)$. Každé prvočíslo $p$ definuje oddělený
 p-adický sektor, v němž je definována p-adická verze Jacobiho theta funkce:
@@ -666,3 +687,248 @@ Ladění toroidálního rezonátoru na konkrétní p-adický mód by vyžadovalo
 odpovídající $p$-adické periodicity, což otevírá možnost selektivní detekce konkrétních
 temných sektorů. To by mohlo vést k rozlišení různých p-adických složek temné hmoty
 a testování hypotézy multivesmíru s p-adickou strukturou.
+
+
+\maketitle
+
+\section{The Topological Mass Model for Higher Generations}
+We hypothesize that the three lepton generations correspond to topological states with increasing complexity \(n=1, 2, 3\). Based on prior symbolic derivations suggesting a scaling law of \(p \approx 7\), we model the topological contribution to mass with the function:
+\begin{equation}
+    S(n) = A \cdot n^7 - B \cdot n \ln(n)
+\end{equation}
+By fitting this model to the experimental masses of the muon (\(m_\mu \approx 105.66\) MeV, n=2) and the tauon (\(m_\tau \approx 1776.86\) MeV, n=3), we determine the theory's effective parameters:
+\begin{align}
+    A &\approx 0.8104 \\
+    B &\approx -1.3948
+\end{align}
+The negative value of B suggests a subtle energetic "cost" associated with the logarithmic term, counteracting the dominant \(n^7\) scaling.
+
+\section{The Electron Anomaly and Self-Energy Prediction}
+For the electron (n=1), the topological mass model predicts:
+\begin{equation}
+    m_{\text{topo}}(1) = S(1) = A \cdot 1^7 - B \cdot 1 \cdot \ln(1) = A \approx 0.8104 \, \text{MeV}
+\end{equation}
+This predicted value is higher than the experimental electron mass (\(m_e^{\text{exp}} \approx 0.511\) MeV). This discrepancy is not a failure of the model, but a key prediction. We postulate that the physical mass is a sum of the topological mass and an electromagnetic self-energy correction, \( \delta m_{\text{EM}} \):
+\begin{equation}
+    m_e^{\text{exp}} = m_{\text{topological}}(1) + \delta m_{\text{EM}}
+\end{equation}
+This implies that the UBT framework predicts a specific value for the electron's self-energy:
+\begin{equation}
+    \delta m_{\text{EM}} = m_e^{\text{exp}} - m_{\text{topological}}(1) \approx 0.511 - 0.8104 = \mathbf{-0.2994 \, \text{MeV}}
+\end{equation}
+
+\section{Conclusion}
+The UBT provides a sophisticated, dual-mechanism explanation for the lepton mass hierarchy. The masses of the muon and tauon are shown to be dominated by the topological energy of their underlying field configurations. The electron's mass is a composite value, resulting from a small topological contribution corrected by a significant, negative electromagnetic self-energy. The theory makes a quantitative, testable prediction for the value of this self-energy, which is the next target for a rigorous QFT calculation within the UBT framework.
+
+
+
+\section*{Topological Mass Fit for Leptons}
+
+We hypothesize the mass of the $n$-th lepton is given by the topological formula:
+\[
+S(n) = A n^p - B n \log n \quad \text{with } p = 6.96
+\]
+
+\subsection*{Fit to Muon and Tau}
+
+Using:
+\begin{align*}
+S(2) &= 105.658 \text{ MeV} \\
+S(3) &= 1776.86 \text{ MeV}
+\end{align*}
+
+we solve for constants $A$ and $B$:
+
+\[
+A = 0.849014, \quad B = 0.031823
+\]
+
+Predicted mass:
+\[
+S(1) = 0.849014 \text{ MeV}
+\]
+
+Actual mass:
+\[
+m_e = 0.511 \text{ MeV}
+\]
+
+Difference:
+\[
+\Delta m = m_e - S(1) = -0.338014 \text{ MeV}
+\]
+
+This indicates a significant deviation for the electron, supporting the hypothesis that its mass arises from a different mechanism (e.g. electromagnetic self-energy), while the heavier generations follow the topological scaling.
+
+\includegraphics[width=\linewidth]{topological_mass_fit.png}
+
+\documentclass[12pt, a4paper]{article}
+\usepackage[utf8]{inputenc}
+\usepackage[english]{babel}
+\usepackage{amsmath, amssymb}
+\usepackage{geometry}
+\usepackage{slashed}
+\usepackage{hyperref}
+
+\geometry{a4paper, margin=1in}
+
+\title{\textbf{Electron Self-Energy in Unified Biquaternion Theory}}
+\author{UBT Research Team}
+\date{June 29, 2025}
+
+In UBT, the action is extended into complex time, where \( \tau = t + i\psi \). The total action becomes:
+\[
+S = \int \mathcal{L} \, d^3x\,dt + i \int \mathcal{L} \, d^3x\,d\psi = S_{\text{real}} + i S_{\text{imaginary}}
+\]
+The quantum amplitude then involves:
+\[
+e^{iS} = e^{iS_{\text{real}}} \cdot e^{-Y} \cdot e^{iX}
+\]
+where \( S_{\text{imaginary}} = X + iY \). The first factor corresponds to standard QED. The new UBT contribution is encoded in \( e^{iX} \), which may affect signs or interference patterns.
+
+\section{Analytic Structure and the Mass Condition}
+
+The observed electron mass requires a cancellation or sign reversal of the standard self-energy correction \( \delta m_{\text{QED}} \). This occurs if:
+\[
+e^{iX} = -1 \quad \Rightarrow \quad X = \pi \mod 2\pi
+\]
+This is not an arbitrary assumption. In UBT, the path integral includes all complexified histories, and the imaginary-time part of the action contributes non-trivially.
+
+We now provide a topological argument why \( X = \pi \) must hold for the electron self-energy loop.
+
+\subsection{Fermionic Loops and Spin Statistics}
+
+A closed fermionic loop represents the creation and annihilation of a virtual electron-positron pair. Due to the spin-1/2 nature of fermions, such a loop contributes a minus sign to the amplitude—analogous to a \( 2\pi \) rotation of a spinor:
+\[
+\psi \rightarrow e^{i\pi} \psi = -\psi
+\]
+
+\subsection{Analogy with the Aharonov-Bohm Effect}
+
+Just as an electron encircling a magnetic flux acquires a phase shift \( e^{i\phi} \) depending on the topology of the field, the electron loop in complex spacetime acquires a phase shift from the geometry of the UBT vacuum. We postulate:
+\[
+X = \oint \mathcal{A}_{\psi} \, d\psi = \pi
+\]
+where \( \mathcal{A}_{\psi} \) is an effective connection in imaginary time.
+
+Combining the analytic decomposition of the complex action with the topological character of fermionic loops, we conclude:
+\[
+\delta m_{\text{UBT}} = e^{iX} \cdot \delta m_{\text{QED}} = -\delta m_{\text{QED}}
+\]
+This sign inversion is not ad hoc, but a necessary and natural consequence of the geometric structure of the UBT path integral.
+
+\bigskip
+\noindent\textbf{Keywords:} Unified Biquaternion Theory, electron self-energy, complex time, topological phase, Aharonov-Bohm, spin-statistics
+
+\appendix{P}{P-adic Extension and Prime-based Alpha Derivation}
+
+This structure suggests a mathematical framework for a multiverse indexed by prime numbers, where each prime defines a separate sector of the universal wavefunction. While speculative, it remains grounded in number theory and topological analysis.
+
+\section{P-adic Numbers and Analysis}
+A $p$-adic number is defined via the $p$-adic norm $|\cdot|_p$:
+\begin{equation}
+|x|_p = p^{-v_p(x)},
+\end{equation}
+where $v_p(x)$ is the highest power of $p$ dividing $x$. The completion of $\mathbb{Q}$ under this norm yields the field $\mathbb{Q}_p$.
+In $p$-adic analysis, convergence is governed by divisibility by $p$, leading to fundamentally different topology compared to $\mathbb{R}$.
+
+\section{P-adic Jacobi Theta Function}
+The classical Jacobi theta function is defined by:
+\begin{equation}
+\theta(z,\tau) = \sum_{n=-\infty}^\infty e^{\pi i n^2 \tau + 2\pi i n z}.
+\end{equation}
+Its $p$-adic analogue can be defined via the $p$-adic exponential and norm:
+\begin{equation}
+\theta_p(z,\tau) = \sum_{n \in \mathbb{Z}} \exp_p\!\left(\pi i\, n^2 \tau + 2\pi i\, n z \right),
+\end{equation}
+where $\exp_p(x) = \sum_{k=0}^\infty \frac{x^k}{k!}$ converges in $\mathbb{Q}_p$ for $|x|_p$ sufficiently small.
+
+The $\theta_p$ modes for distinct primes are orthogonal on the $p$-adic torus $T_p^2$, ensuring dynamical independence.
+
+\section{Prime-based Fine-Structure Constants}
+We hypothesize that each $p$-adic sector admits its own fine-structure constant $\alpha_p$, given by a topological invariant:
+\begin{equation}
+\alpha_p^{-1} \approx \frac{2\pi}{\ln(p)} \cdot f_{\mathrm{top}}(p),
+\end{equation}
+where $f_{\mathrm{top}}(p)$ encodes the geometric normalization from the UBT toroidal embedding.
+
+For $p=137$, this reproduces the observed $\alpha$ within measurement uncertainty. For other primes ($p=131,139,\dots$), it predicts alternate universes with different electromagnetic strengths.
+
+\section{Python Implementation}
+Below is a simple Python script to compute $\alpha_p$ for selected primes using the proposed formula.
+
+\begin{verbatim}
+import sympy as sp
+
+def alpha_p(p):
+    return 1 / ((2*sp.pi/sp.log(p)))
+
+primes = [131, 137, 139, 149]
+for p in primes:
+    val = alpha_p(p)
+    print(f"p={p}, alpha_p ≈ {float(val):.9f}, 1/alpha_p ≈ {1/val:.6f}")
+\end{verbatim}
+
+\section{Conclusion}
+The $p$-adic extension of UBT enriches the theory with a discrete topological index $p$, naturally connected to number theory. This not only yields a novel perspective on the fine-structure constant but also offers testable predictions for hypothetical universes indexed by primes.
+
+
+\section{Methodology}
+\section{Experimental Detection in UBT Framework}
+A possible detection method involves modulating the phase $\psi$ in a toroidal $\Theta$-resonator, tuned to frequencies corresponding to $\omega_0$ of the DM spectrum. The coupling is expected to produce minute phase shifts or sideband structures in the resonator's electromagnetic response.
+
+\subsection{Minimal Parameter Inference (Practical Template)}
+Given an observational target $(\rho_{\rm DM}, \sigma/m)$ and a chosen prime set $\mathcal{P}^\star$, the following steps infer UBT parameters:
+\begin{enumerate}
+\item Fix the internal-mode scale from the $\alpha$ analysis (Appendix~\ref{app:alpha-consolidated}).
+\item Choose $Q_H$ and solve the classical soliton for $(\kappa_2,\kappa_4)$ with $R_H\!\sim\!(\kappa_4/\kappa_2)^{1/2}$.
+\item Compute $\hat{\mathcal{O}}$ on $S^3$ and evaluate $\Delta M_H^{\rm 1\text{-}loop}$ (heat-kernel or phase-shift methods).
+\item Evolve $n_H$ with a nonthermal source $\mathcal{S}_{\rm topo}(T)$; check CMB/BBN and structure-formation constraints.
+\item If including prime sectors, repeat for each $p\in\mathcal{P}^\star$ and sum $\rho_{\rm DM}^{(p)}$.
+\end{enumerate}
+
+\section{Conclusion and Future Work}
+We conclude that topologically neutral solutions in UBT provide a compelling, geometrically grounded candidate for dark matter. Future work will:
+\begin{itemize}
+  \item Simulate \( \Theta_D \) structures using lattice field methods,
+  \item Derive analytic profiles for their gravitational potential,
+  \item Investigate interaction with visible matter and galaxy formation,
+  \item Extend to early-universe cosmology and dark matter genesis.
+\end{itemize}
+
+Using the Green's function method, the solution reads:
+\[
+\Phi(\vec{x}) = -G \int \frac{T_{00}(\vec{x}')}{|\vec{x} - \vec{x}'|} \, d^3x'.
+\]
+
+\section{Physical Interpretation}
+While speculative, this approach offers a rigorous mathematical setting for multiverse-like structures without departing from established mathematics. The independence of $\theta_p$ modes implies that each prime corresponds to a decoupled physical sector. Small tunneling amplitudes between sectors may correspond to exotic physical phenomena, potentially including altered constants, stability of exotic particles, or changes in interaction strengths.
+
+\section{Results}
+\subsection{Consistency with the Electromagnetic Sector}
+The same UBT normalization that fixes the $U(1)$ sector and the fine-structure constant (Appendix~\ref{app:alpha-consolidated}) also sets $\kappa_{2,4}$ and the fluctuation gap in \eqref{eq:ubt-hopf-energy}.
+Hence $M_H$ and the derived $\rho_{\rm DM}$ co-vary with the internal-mode scale, tying DM and EM predictions to a common geometric origin.
+
+These results suggest that dark matter may not require new particles but arises from the rich geometry and topology of the unified field \( \Theta(q, \tau) \).
+
+\section{Next Steps}
+To validate this configuration:
+\begin{itemize}
+    \item Numerically simulate the stability of \(\Theta_D\),
+    \item Compute the resulting gravitational potential from \(T_{\mu\nu}\),
+    \item Fit predicted rotation curves to observed galactic data.
+\end{itemize}
+
+\subsection*{Prediction for Electron (n = 1)}
+
+\section{Discussion}
+\section{Discussion}
+
+\section{Topological Interpretation of the Phase \( e^{i\pi} \)}
+
+\section{Conclusion}
+\section*{Conclusion}
+
+\section{Conclusion}
+
+\end{document}
