--- a/consolidation_project/ubt_2_main.tex
+++ b/consolidation_project/ubt_2_main.tex
@@ -5,7 +5,7 @@
 \geometry{a4paper, margin=1in}
 
 \title{Unified Biquaternion Theory 2.0 (Consolidated)}
-\author{David Jaroš}
+\author{UBT Team}
 \date{\today}
 
 \begin{document}
@@ -13,13 +13,19 @@
 \tableofcontents
 
 \appendix
-\input{appendix_A_alpha_consolidated}
-\input{appendix_B_electromagnetism_consolidated}
-\input{appendix_C_lepton_masses_consolidated}
+% ---- CORE ----
+\input{appendix_A_biquaternion_gravity_consolidated}
+\input{appendix_C_electromagnetism_gauge_consolidated}
+\input{appendix_D_qed_consolidated}
 \input{appendix_E_SM_QCD_embedding}
+\input{appendix_K_maxwell_curved_space}
+
+% ---- SPECULATIVE / WIP ----
 \input{appendix_G_dark_matter_unified_padic}
-\input{appendix_V_visual_maps}
 \input{appendix_K_fundamental_constants_consolidated}
-\input{appendix_P_bibliography}
 \input{appendix_O_padic_overview}
+
+% ---- BIBLIOGRAPHY ----
+\input{appendix_W_bibliography}
+
 \end{document}
