--- a/consolidation_project/appendix_H_alpha_padic_combined.tex
+++ b/consolidation_project/appendix_H_alpha_padic_combined.tex
@@ -1,9 +1,12 @@
+%% ----------------------------------------------
+%% SPECULATIVE / WIP: The following material is exploratory and not part of CORE claims.
+%% ----------------------------------------------
 % Combined Appendix: Alpha Constants and p-adic Extension
 % This file merges appendix_H_alpha_and_constants.tex and appendix_P_prime_alpha.tex
 
 \section*{Appendix H: Fine-Structure Constant, Topological Derivations, and p-adic Extension}
 
-This appendix consolidates the derivation of the fine-structure constant from topological and geometric considerations with its extension into the p-adic domain.
+This appendix consolidates the Notes on modelling the fine-structure constant from topological and geometric considerations with its extension into the p-adic domain.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Classical / topological derivations
@@ -127,7 +130,7 @@ The resulting formula for $\alpha$,
 \begin{equation}
 \alpha_{\mathrm{UBT}} \;=\; \alpha_0\,\big[ 1 + \delta\alpha_{\mathrm{mod}}(\tau_\psi;\varepsilon_\lambda,\varepsilon_\eta) \big],
 \end{equation}
-reduces to standard physics in the $\partial_\psi(\cdot)=0$ limit and predicts only tiny, structured deviations under controlled phase protocols.
+reduces to standard physics in the $\partial_\psi(\cdot)=0$ limit and suggest only tiny, structured deviations under controlled phase protocols.
 Informally, one might say that \emph{theta} acts as a guiding principle: the modular anatomy of $\alpha$ mirrors the toroidal, phase-coupled fabric of UBT.
 
 
@@ -155,7 +158,7 @@ The generalized leading-order formula from the topological derivation is:
 \begin{equation}
 \alpha^{-1}(N) \approx N + \delta_{\mathrm{QED}}(N) + \delta_{\mathrm{grav}}(N),
 \end{equation}
-where $\delta_{\mathrm{QED}}$ and $\delta_{\mathrm{grav}}$ are radiative and gravitational corrections derived in Appendices H and I.
+where $\delta_{\mathrm{QED}}$ and $\delta_{\mathrm{grav}}$ are radiative and gravitational corrections propose in Appendices H and I.
 
 The $p$-adic interpretation replaces $N$ by a $p$-adic norm $|N|_p^{-1}$, where $p$ is the same prime as $N$ for the self-consistent universe, leading to a quantization of $\alpha^{-1}$ in discrete prime steps. This yields:
 \begin{equation}
@@ -174,4 +177,4 @@ Using the same correction model as for $p=137$, we find:
 Small changes in $\alpha$ modify atomic and molecular energy levels, fusion rates, and even stellar lifetimes. The $p$-adic formulation suggests that the prime number acts as a discrete "dial" for universes, with stability of complex matter only possible for certain primes. This framework naturally integrates with the drift-diffusion dynamics in complex time, as described in Appendix F.
 
 \subsection*{Conclusion}
-The $p$-adic extension of UBT not only provides a mathematically consistent embedding for discrete prime parameters, but also predicts that the fine-structure constant is quantized in prime-based steps. Our universe, with $p=137$, is optimally balanced for stability and complexity, but nearby prime universes ($p=131$, $p=139$) might still host recognizable physics, albeit with altered constants.
+The $p$-adic extension of UBT not only provides a mathematically consistent embedding for discrete prime parameters, but also suggest that the fine-structure constant is quantized in prime-based steps. Our universe, with $p=137$, is optimally balanced for stability and complexity, but nearby prime universes ($p=131$, $p=139$) might still host recognizable physics, albeit with altered constants.
