--- a/consolidation_project/appendix_K_fundamental_constants_consolidated.tex
+++ b/consolidation_project/appendix_K_fundamental_constants_consolidated.tex
@@ -1,7 +1,10 @@
-\section{Appendix K: Prediction of Fundamental Constants (Beyond $\alpha$)}
+%% ----------------------------------------------
+%% SPECULATIVE / WIP: The following material is exploratory and not part of CORE claims.
+%% ----------------------------------------------
+\section{Appendix K: suggest of Fundamental Constants (Beyond $\alpha$)}
 \label{app:fundamental-constants}
 
-This appendix consolidates UBT-derived constraints and predictions for fundamental constants beyond the fine-structure constant $\alpha$ (treated in Appendix~\ref{app:alpha-consolidated}). We distinguish \emph{inputs} (assumptions/fixed scales) from \emph{outputs} (predictions) and cross-check against CODATA/PDG values.
+This appendix consolidates UBT-propose constraints and predictions for fundamental constants beyond the fine-structure constant $\alpha$ (treated in Appendix~\ref{app:alpha-consolidated}). We distinguish \emph{inputs} (assumptions/fixed scales) from \emph{outputs} (predictions) and cross-check against CODATA/PDG values.
 
 \subsection{Methodological outline}
 \begin{enumerate}
@@ -41,7 +44,7 @@ Given $e=g\sin\theta_W=g'\cos\theta_W$ and $e$ fixed by Appendix~\ref{app:alpha-
 \begin{center}
 \begin{tabular}{lccc}
 \hline
-Constant & UBT Status & Prediction/Input & Comparison (CODATA/PDG)\\
+Constant & UBT Status & suggest/Input & Comparison (CODATA/PDG)\\
 \hline
 $c$ & unit & input & (exact)\\
 $\hbar$ & unit & input & (exact)\\
