--- a/consolidation_project/ubt_2_main.tex
+++ b/consolidation_project/ubt_2_main.tex
@@ -12,6 +12,10 @@
 \maketitle
 \tableofcontents
 
+\section*{CORE Scope and Claims}
+This CORE manuscript presents a biquaternion formulation that recovers the Einstein--Maxwell--Dirac system under a standard variational action and demonstrates the correct limits (Minkowski and weak-field). \textbf{We do not claim an ab-initio derivation of the fine-structure constant}~$\alpha$; in the CORE track $\alpha(\mu)$ is treated as an empirical input consistent with QED running. Any links between the auxiliary phase coordinate~$\psi$ and consciousness are considered \emph{interpretive and speculative} and are not part of the CORE results. Quantitative, testable predictions are stated with their assumptions and orders of magnitude.
+
+
 \appendix
 % ---- CORE ----
 \input{appendix_A_biquaternion_gravity_consolidated}
@@ -26,6 +30,7 @@
 \input{appendix_O_padic_overview}
 
 % ---- BIBLIOGRAPHY ----
+\input{appendix_S_speculative_notes}
 \input{appendix_W_bibliography}
 
 \end{document}
