--- a/consolidation_project/ubt_core_main.tex
+++ b/consolidation_project/ubt_core_main.tex
@@ -13,6 +13,10 @@
 \maketitle
 \tableofcontents
 
+\section*{CORE Scope and Claims}
+This CORE manuscript presents a biquaternion formulation that recovers the Einstein--Maxwell--Dirac system under a standard variational action and demonstrates the correct limits (Minkowski and weak-field). \textbf{We do not claim an ab-initio derivation of the fine-structure constant}~$\alpha$; in the CORE track $\alpha(\mu)$ is treated as an empirical input consistent with QED running. Any links between the auxiliary phase coordinate~$\psi$ and consciousness are considered \emph{interpretive and speculative} and are not part of the CORE results. Quantitative, testable predictions are stated with their assumptions and orders of magnitude.
+
+
 % ---- CORE APPENDICES (auto-included) ----
 % NOTE: do not include speculative/WIP files here.
 
@@ -23,4 +27,5 @@
 \input{appendix_K_maxwell_curved_space}
 \input{appendix_W_bibliography}
 
+\input{appendix_alpha_statement}
 \end{document}
